--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"axios": "0.18.0"
+		"axios": "^0.19.0"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "3.3.0",
