--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"axios": "^0.19.0"
+		"axios": "0.19.0"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "3.3.0",
-		"@vue/cli-plugin-eslint": "3.3.0",
-		"@vue/cli-service": "3.3.0",
+		"@vue/cli-plugin-eslint": "3.9.2",
+		"@vue/cli-service": "3.9.2",
 		"@vue/eslint-config-prettier": "4.0.1",
 		"compression-webpack-plugin": "2.0.0",
-		"core-js": "2.6.1",
-		"prettier": "1.15.3",
-		"rimraf": "2.6.2",
+		"core-js": "2.6.9",
+		"prettier": "1.18.2",
+		"rimraf": "2.6.3",
 		"uglify-es": "3.3.9",
-		"vue": "2.5.21",
-		"vue-template-compiler": "2.5.21",
-		"vuex": "3.0.1"
+		"vue": "2.6.10",
+		"vue-template-compiler": "2.6.10",
+		"vuex": "3.1.1"
 	},
 	"engines": {
 		"node": ">= 10.0.0",
