--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
 		"build": "vue-cli-service build --modern",
 		"lint": "vue-cli-service lint"
 	},
-	"dependencies": {
-		"axios": "0.19.0"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "3.3.0",
 		"@vue/cli-plugin-eslint": "3.9.2",
