--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"build": "vue-cli-service build --modern",
 		"lint": "vue-cli-service lint"
 	},
+	"main": "src",
 	"dependencies": {},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "3.3.0",
